--- a/folklore_base/apps/base/templates/jscss.html
+++ b/folklore_base/apps/base/templates/jscss.html
@@ -1,9 +1,11 @@
 {% load static %}
 
-<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" >
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-<script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
-<script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
-<script src="{% static "js/jouele.min.js" %}"></script>
-<link href="{% static "css/jouele.min.css" %}" rel="stylesheet"/>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
+<script src="{% static 'js/jouele.min.js' %}"></script>
+<link href="{% static 'css/jouele.min.css' %}" rel="stylesheet"/>
 <link rel="shortcut icon" type="image/png" href="{% static 'ico/favicon.ico' %}"/>
+<script type="text/javascript" src="{% static 'js/jquery.fancybox.js' %}"></script>
+<link href="{% static 'css/jquery.fancybox.css' %}" rel="stylesheet"/>
