--- a/folklore_base/apps/base/templates/informants.html
+++ b/folklore_base/apps/base/templates/informants.html
@@ -19,7 +19,7 @@
 <td>{{i.fio}}</td>
 <td>{{i.date_of_birth}}</td>
 <td>{{i.place_of_residence}}</td>
-<td><a href="{{i.id}}" class="btn btn-secondary shadow">Подробнее</a></td>
+<td><a href="{{i.id}}" class="btn btn-outline-dark btn-sm m-1">Подробнее</a></td>
 </tr>
 {% endfor %}
 </table>
