--- a/folklore_base/apps/base/templates/photo_upload.html
+++ b/folklore_base/apps/base/templates/photo_upload.html
@@ -7,10 +7,14 @@
 <div class="col-md-9">
                 <div class="row">
 
-                    <form method="post">
+                    <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {{form}}
-
+                        <label>Example file input</label><br>
+                        {{form.photo_file}}<br>
+                        {{form.description_photo}}<br>
+                        {{form.seans}}<br>
+                        <button class="btn btn-success" type="submit">загрузить</button>
+                        <span>{{error}}</span>
                     </form>
 
                 </div>
