--- a/folklore_base/apps/base/templates/photo_upload.html
+++ b/folklore_base/apps/base/templates/photo_upload.html
@@ -2,6 +2,7 @@
 {% block title %}
 {% endblock %}
 {% block content %}
+
  <div class="container">
         <div class="row">
 <div class="col-md-9">
@@ -13,6 +14,7 @@
                         {{form.photo_file}}<br>
                         {{form.description_photo}}<br>
                         {{form.seans}}<br>
+<!--                        <input type="hidden" name="seans" required id="id_seans" value="{{id}}"><br>-->
                         <button class="btn btn-success" type="submit">загрузить</button>
                         <span>{{error}}</span>
                     </form>
