Добавлена возможность изменять фото в галлерее

--- a/folklore_base/apps/base/templates/base.html
+++ b/folklore_base/apps/base/templates/base.html
@@ -18,7 +18,7 @@
   <h1 class="text-center display-6">Банк данных экспедиционных записей</h1>
   {%include 'nav.html'%}
   <br>
-  <div class="row">
+  <div class="row m-5">
     <div class="col">
       {% block content %}
       {% endblock content %}
