--- a/folklore_base/apps/base/templates/photo.html
+++ b/folklore_base/apps/base/templates/photo.html
@@ -2,30 +2,59 @@
 {% block title %}
 {% endblock %}
 {% block content %}
- <div class="container">
-        <div class="row">
+
+ <!-- Button trigger modal -->
+<button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Загрузить фото
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Загрузить фотографию</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+       <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <label>Выберите файл</label><br>
+                        {{form.photo_file}}<br><br>
+                        {{form.description_photo}}<br>
+                        {{form.seans}}<br>
+                        <span>{{error}}</span>
+
+      </div>
+      <div class="modal-footer">
+          <button class="btn btn-outline-success" type="submit">Загрузить</button>
+      </div>
+        </form>
+    </div>
+  </div>
+</div>
+
 <div class="col-md-9">
-                <div class="row">
+    <div class="row">
 
-                    {% for photo in photo %}
-                    <div class="col-md-4">
-                        <div class="card my-2">
-                            <a data-fancybox="gallery" href="{{photo.photo_file.url}}">
-                                <img src="{{photo.photo_file.url}}" class="img-fluid"></a>
-                            <div class="card-body">
-                                <small>Описание: {{photo.description_photo}}</small>
-                            </div>
-                        </div>
-                    </div>
+        {% for photo in photo %}
+        <div class="col-md-4">
+            <div class="card my-2">
+                <a data-fancybox="gallery" href="{{photo.photo_file.url}}">
+                    <img src="{{photo.photo_file.url}}" class="img-fluid"></a>
+                <div class="card-body">
+                    Описание: <small>{{photo.description_photo}}</small>
 
-                    {% empty %}
-                    <h3>No photos...</h3>
-                    {% endfor %}
 
+                       <a href="/photo/{{photo.id_of_digitl_media}}/update" class="btn btn-outline-primary btn-sm pull-right">изменить</a>
                 </div>
-          </div>
+            </div>
         </div>
- </div>
 
+        {% empty %}
+        <h3>No photos...</h3>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock content %}
