--- a/folklore_base/apps/base/templates/photo.html
+++ b/folklore_base/apps/base/templates/photo.html
@@ -2,7 +2,7 @@
 {% block title %}
 {% endblock %}
 {% block content %}
-
+<!--{% if request.user.is_authenticated %}-->
  <!-- Button trigger modal -->
 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Загрузить фото
@@ -20,7 +20,7 @@
        <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <label>Выберите файл</label><br>
-                        {{form.photo_file}}<br><br>
+                        <input type="file" name="photo_file" accept="image/*" multiple required id="id_photo_file"><br><br>
                         {{form.description_photo}}<br>
                         {{form.seans}}<br>
                         <span>{{error}}</span>
@@ -33,7 +33,7 @@
     </div>
   </div>
 </div>
-
+<!--{% endif %}-->
 <div class="col-md-9">
     <div class="row">
 
@@ -45,10 +45,12 @@
                 <div class="card-body">
                     Описание: <small>{{photo.description_photo}}</small>
                 </div>
+                {% if request.user.is_authenticated %}
                 <div class="card-footer">
                     <a href="/photo/{{photo.id_of_digitl_media}}/update" class="btn btn-outline-primary btn-sm pull-right">изменить</a>
                     <a href="/photo/{{photo.id_of_digitl_media}}/delete" class="btn btn-outline-danger btn-sm pull-right">удалить</a>
                 </div>
+                {% endif %}
             </div>
         </div>
 
