--- a/folklore_base/apps/base/templates/digitalmediadetail.html
+++ b/folklore_base/apps/base/templates/digitalmediadetail.html
@@ -17,21 +17,34 @@
     </thead>
     <tbody>
       <tr>
-        <td>{{ object.id_of_digitl_media }}</td>
-        <td>{% for i in object.tm_dm.all %}
+        <td>{{ media.id_of_digitl_media }}</td>
+        <td>{% for i in media.tm_dm.all %}
           <button type="button" name="button" class="btn btn-outline-dark btn-sm m-1 jouele-control" data-type="seek" data-range="{{i.time_stamp|time:'H:i:s'}} ... {{i.end_time_stamp|time:'H:i:s'}}">{{i.time_stamp|time:"H:i:s"}}</button>
           <span class="jouele-control" data-type="timeline" data-range="{{i.time_stamp|time:'H:i:s'}}...{{i.end_time_stamp|time:'H:i:s'}}" >{{i.text_for_time_stamp}}</span><br>
           {%endfor%}
         </td>
-        <td>{{ object.file_description|linebreaks }}</td>
+        <td>{{ media.file_description|linebreaks }}</td>
       </tr>
       <tr>
         <td colspan="3" class="table-secondary">
-          <a href="{{ object.fileupl.url }}" class="jouele" data-space-control="true">{{ object.id_of_digitl_media }}</a><br>
+          <a href="{{ media.fileupl.url }}" class="jouele" data-space-control="true">{{ media.id_of_digitl_media }}</a><br>
           <button type="button" name="button" class="jouele-control btn btn-outline-dark btn-sm m-1 " data-type="play-pause">play / pause</button>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
+<div class="input-group">
+  <span class="input-group-text">Начало фрагмента</span>
+   {{ form.time_stamp }}
+  <span class="input-group-text">Конец фрагмента</span>
+  {{form.end_time_stamp}}
+</div><br>
+<div class="input-group">
+  <span class="input-group-text">Номер фрагмента</span>
+{{form.number_of_temestamp}}
+<span class="input-group-text">ID файла</span>
+  {{form.timestamp_for_dm}}
+</div><br>
+{{form.text_for_time_stamp}}
 {% endblock content %}
