--- a/folklore_base/apps/base/templates/photo.html
+++ b/folklore_base/apps/base/templates/photo.html
@@ -13,13 +13,13 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Загрузить фотографию</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Загрузить фотографии</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
        <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
-                        <label>Выберите файл</label><br>
+                        <label>Выберите файлы</label><br>
                         {{form.photo_file}}<br>
                         {{form.description_photo}}<br>
                         {{form.seans}}<br>
